--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ecommerce
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_springboot?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://root:jLvcxzkMsGRSzDCtGcijxPmKawMYoIZI@junction.proxy.rlwy.net:13272/railway
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=update
