--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 spring.datasource.url=jdbc:mysql://root:jLvcxzkMsGRSzDCtGcijxPmKawMYoIZI@junction.proxy.rlwy.net:13272/railway
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=jLvcxzkMsGRSzDCtGcijxPmKawMYoIZI
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
